--- a/index.html
+++ b/index.html
@@ -4,8 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProyectoTecsu</title>
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
-    <h1>hola</h1>
+    <section class="section">
+        <h1 class="section__titulo">Bienvenidos <span class="titulo2">forasteros</span></h1>
+    </section>
+    <main class="contenedor">
+        <div class="parrafo">
+            <p>que la vida no sea tan desigual como todos quieren pero se fuerte</p>
+        </div>
+        <textarea></textarea>
+    </main>
 </body>
 </html>
