--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 </head>
 <body>
     <section class="section">
-        <h1 class="section__titulo">Bienvenidos <span class="titulo2">forasteros</span></h1>
+        <h1 class="titulo">Bienvenidos <span class="titulo2">forasteros</span></h1>
     </section>
     <main class="contenedor">
-        <div class="parrafo">
-            <p>que la vida no sea tan desigual como todos quieren pero se fuerte</p>
+        <div class="contenedor__parrafo">
+            <h2 class="subtitulo">Que empieze la aventura del mundo de la programación</h2>
+            <p>Escribe un apodo</p>
+            <textarea name="name" id="agregarNombre" cols="40" rows="1"></textarea>
+            <button>Ingresar</button>
         </div>
-        <textarea></textarea>
     </main>
 </body>
 </html>
