--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
     <section class="section">
         <h1 class="titulo">Bienvenidos <span class="titulo2">forasteros</span></h1>
     </section>
-    <main class="contenedor">
+    <main class="contenedor principal">
+        <h2 class="subtitulo">¿Quieres empezar en este mundo?</h2>
         <div class="contenedor__parrafo">
-            <h2 class="subtitulo">Que empieze la aventura del mundo de la programación</h2>
-            <p>Escribe un apodo</p>
-            <textarea name="name" id="agregarNombre" cols="40" rows="1"></textarea>
-            <button>Ingresar</button>
+            <form class="formulario" action="#">
+                <div>
+                    <label class="campo">Escribe tu nombre: </label>
+                    <input class="input-text" type="text">
+                </div>
+                <button class="buttonPrincipal">
+                    <a href="index2.html">Agregar</a>
+                </button>
+            </form>
         </div>
     </main>
 </body>
