--- a/index3.html
+++ b/index3.html
@@ -7,12 +7,30 @@
 </head>
 <body>
     <main class="contenedor">
-        <div class="contenedor__"></div>
-        <div class="contenedor__clase2"></div>
-        <div class="contenedor__clase3"></div>
-        <div class="contenedor__clase4"></div>
-        <div class="contenedor__clase5"></div>
-        <div class="contenedor__clase6"></div>
+        <div class="contenedor__clase1">
+            <h2>Introducción</h2>
+            <button>Comenzar</button>
+        </div>
+        <div class="contenedor__clase2">
+            <h2>Clase nr. 1</h2>
+            <button>Comenzar</button>
+        </div>
+        <div class="contenedor__clase3">
+            <h2>Clase nr. 2</h2>
+            <button>Comenzar</button>
+        </div>
+        <div class="contenedor__clase4">
+            <h2>Clase nr. 3</h2>
+            <button>Comenzar</button>
+        </div>
+        <div class="contenedor__clase5">
+            <h2>Clase nr. 4</h2>
+            <button>Comenzar</button>
+        </div>
+        <div class="contenedor__clase6">
+            <h2>Clase nr. 5</h2>
+            <button>Comenzar</button>
+        </div>
     </main>
 </body>
 </html>
