--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <section class="section">
+    <header class="section">
         <h1 class="titulo">Bienvenidos <span class="titulo2">forasteros</span></h1>
-    </section>
+    </header>
     <main class="contenedor principal">
         <h2 class="subtitulo">¿Quieres empezar en este mundo?</h2>
         <div class="contenedor__parrafo">
