--- a/index2.html
+++ b/index2.html
@@ -6,15 +6,15 @@
     <title>ProyectoTecsu</title>
     <link rel="stylesheet" href="css/style.css">
 </head>
-<body class="body">
+<body>
     <main class="contenedor">
-        <div class="contenedor__menu">
+        <div class="contenedor__intro">
             <h2 class="titulo2">Introducción</h2>
             <button class="contenedor__button"><a href="index3.html">
                 Empezar
             </a></button>
             <p class="text">Empezemos esta gran aventura como grandes aventureros</p>
-            <p class="text2">Descubriremos de lo que se somo capacas de hacer en el mundo
+            <p class="text">Descubriremos de lo que se somo capacas de hacer en el mundo
                 de la programación aprendiendo lo basico, que es lo mas importante.
             </p>
         </div>
