--- a/index3.html
+++ b/index3.html
@@ -4,33 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ProyectoTecsu</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    <main class="contenedor">
-        <div class="contenedor__clase1">
+    <header>
+        <div class="progress">
+            <div class="progress-bar" style="width:75%;">
+                <span class="progress-bar-text">75%</span>
+            </div>
+        </div>
+    </header>
+    <main class="menu">
+        <div class="contenedor clase">
             <h2>Introducción</h2>
-            <button>Comenzar</button>
+            <button class="contenedor__button button-class">
+                <a href="#">Comenzar</a>
+            </button>
         </div>
-        <div class="contenedor__clase2">
+        <div class="contenedor clase">
             <h2>Clase nr. 1</h2>
-            <button>Comenzar</button>
+            <button class="contenedor__button button-class">
+                <a href="#">Comenzar</a>
+            </button>
         </div>
-        <div class="contenedor__clase3">
+        <div class="contenedor clase">
             <h2>Clase nr. 2</h2>
-            <button>Comenzar</button>
+            <button class="contenedor__button button-class">
+                <a href="#">Comenzar</a>
+            </button>
         </div>
-        <div class="contenedor__clase4">
+        <div class="contenedor clase">
             <h2>Clase nr. 3</h2>
-            <button>Comenzar</button>
+            <button class="contenedor__button button-class">
+                <a href="#">Comenzar</a>
+            </button>
         </div>
-        <div class="contenedor__clase5">
+        <div class="contenedor clase">
             <h2>Clase nr. 4</h2>
-            <button>Comenzar</button>
+            <button class="contenedor__button button-class">
+                <a href="#">Comenzar</a>
+            </button>
         </div>
-        <div class="contenedor__clase6">
+        <div class="contenedor clase">
             <h2>Clase nr. 5</h2>
-            <button>Comenzar</button>
+            <button class="contenedor__button button-class">
+                <a href="#">Comenzar</a>
+            </button>
         </div>
     </main>
+    <footer>
+        <p>derechos reservados @tecsu</p>
+    </footer>
 </body>
 </html>
