--- a/index.html
+++ b/index.html
@@ -8,17 +8,17 @@
 </head>
 <body>
     <header class="section">
-        <h1 class="titulo">Bienvenidos <span class="titulo2">forasteros</span></h1>
+        <h1 class="titulo">Bienvenidos <span>forasteros</span></h1>
     </header>
     <main class="contenedor principal">
         <h2 class="subtitulo">¿Quieres empezar en este mundo?</h2>
         <div class="contenedor__parrafo">
             <form class="formulario" action="#">
-                <div>
+                <div class="input-text" id="imput">
                     <label class="campo">Escribe tu nombre: </label>
-                    <input class="input-text" type="text">
+                    <input class="campo" type="text" placeholder="  Nombre">
                 </div>
-                <button class="buttonPrincipal">
+                <button id="BtonUp" type="button" class="buttonPrincipal">
                     <a href="index2.html">Agregar</a>
                 </button>
             </form>
