--- a/index2.html
+++ b/index2.html
@@ -10,13 +10,14 @@
     <main class="contenedor">
         <div class="contenedor__intro">
             <h2 class="titulo2">Introducción</h2>
+            <h3>¡Bienvenido (Nombre del usuario)!</h3>
+            <p class="text">Empezemos esta gran aventura como grandes aventureros</p>
+            <p class="text">Descubriremos de lo que se somo capaces de hacer en el mundo
+                de la programación aprendiendo lo basico, que es lo mas importante.
+            </p>
             <button class="contenedor__button"><a href="index3.html">
                 Empezar
             </a></button>
-            <p class="text">Empezemos esta gran aventura como grandes aventureros</p>
-            <p class="text">Descubriremos de lo que se somo capacas de hacer en el mundo
-                de la programación aprendiendo lo basico, que es lo mas importante.
-            </p>
         </div>
     </main>
 </body>
